[project]
name = "formality-eval"
version = "2025.03.27"
authors = [{name = "Ramón Carreño", email = "ramcv98@gmail.com"}]
dependencies = ["datasets", "torch", "transformers", "scikit-learn", "fasttext"]
readme = "README.md"
license = {text = "GNU AGPLv3"}

[tool.setuptools]
packages = ["formality_eval"]